<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_linear_layout_right_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout_right_center"
        app:layout_constraintTop_toBottomOf="@id/button_linear_layout" />

    <Button
        android:id="@+id/button_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_layout"
        app:layout_constraintTop_toBottomOf="@id/button_linear_layout_right_center" />

    <Button
        android:id="@+id/button_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout"
        app:layout_constraintTop_toBottomOf="@id/button_table_layout" />

    <Button
        android:id="@+id/button_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout"
        app:layout_constraintTop_toBottomOf="@id/button_frame_layout" />

    <Button
        android:id="@+id/button_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_layout"
        app:layout_constraintTop_toBottomOf="@id/button_relative_layout" />

</android.support.constraint.ConstraintLayout>