<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!--定义一个表格布局，指定第2个列允许收缩，第3列允许拉伸-->
    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="2">
        <!--直接添加按钮，它自己会占一行-->
        <Button
            android:id="@+id/ok1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok1" />
        <!--添加一个表格行-->
        <TableRow>
            <!--为该表格添加3个按钮-->
            <Button
                android:id="@+id/ok2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok3"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok4"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>
    <!--定义第二个办法·表格布局，指定第2列隐藏-->
    <TableLayout
        android:id="@+id/TableLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="1">
        <!--直接添加按钮，它自己会占一行-->
        <Button
            android:id="@+id/ok5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok1" />
        <!--添加一个表格行-->
        <TableRow>
            <!--为该表格添加3个按钮-->
            <Button
                android:id="@+id/ok6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok3"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok4"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>
    <!--定义第三个办法·表格布局，指定第2列和第3列可以被拉伸-->
    <TableLayout
        android:id="@+id/TableLayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="1,2">
        <!--直接添加按钮，它自己会占一行-->
        <Button
            android:id="@+id/ok9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok1" />
        <!--添加一个表格行-->
        <TableRow>
            <!--为该表格添加3个按钮-->
            <Button
                android:id="@+id/ok10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok3"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok4"
                tools:ignore="ButtonStyle" />
        </TableRow>
        <!--添加一个表格行-->
        <TableRow>
            <!--为该表格添加3个按钮-->
            <Button
                android:id="@+id/ok13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok3"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>
</LinearLayout>
